[package]
name = "gaia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.20", features = [ "derive" ]}
tokio = {version="1.21.0", features= ["full"]}
tokio-serde = "0.8"
serde = "1.0.144"
serde_json = "1.0"
crossbeam = "0.8.2"
memmap2 = "0.5.7"
tokio-scoped = "0.2.0"
anyhow = "1"
noise = "0.7"
rand = "0.8.5"